--- a/index.html
+++ b/index.html
@@ -385,7 +385,8 @@
           ></span>
         </div>
       </div>
-      <div class="row h-50">
+      <div class="row h-50 m-0">
+        <hr class="text-white" />
         <div class="col-8 d-flex justify-content-center align-items-center">
           <div class="addr text-white">
             <address>
